--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<h1>Download Files</h1>
 	<p>Click on the links below to download files:</p>
 	<ul>
-		<li><a href="https://example.com/file1.pdf" download>File 1</a></li>
-		<li><a href="https://example.com/file2.zip" download>File 2</a></li>
-		<li><a href="https://example.com/file3.docx" download>File 3</a></li>
+		<li><a href="https://exe.io/buWidrN" download>Module 1 Graph Theory</a></li>
 	</ul>
 </body>
 </html>
