--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Welcome to My Video Website</h1>
     <div class="video-player">
       <video controls>
-        <source src="video.mp4" type="video/mp4">
+        <source src="kerosen slowed.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
