--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <p><a class="link" href="#">Forgot password?</a></p>
         <button type="submit">Contnue</button>
         <p class="text-center">Don't have an account?
-            <a class="link" href="#">Sign up</a>
+            <a class="link" href="register.html">Sign up</a>
         </p>
     </form>
 </body>
