--- a/index.html
+++ b/index.html
@@ -1,131 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login page</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        :root {
-            --color-primary: #10a37f;
-            --color-n-200: #c2c8d0;
-            --color-n-300: #999;
-            --transition: 0.2s ease;
-            --br: 3.2px;
-        }
+  <title>Basic Snake HTML Game</title>
+  <meta charset="UTF-8">
+  <style>
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
 
-        .form {
-            --spacing-default: 16px;
-            --spacing-top: var(--spacing-default);
-            --spacing-left: var(--spacing-default);
-            --spacing-right: var(--spacing-default);
-            --spacing-bottom: var(--spacing-default);
-            --spacing-top-offset: -0.7;
-            --spacing-left-offset: 0.5;
-            display: grid;
-            gap: 1rem;
-            margin-block: 4rem;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            display: grid;
-            place-items: center;
-            min-height: 100vh;
-            margin: 0;
-            font-family: "Poppins", sans-serif;
-        }
-
-        .form-group {
-            position: relative;
-        }
-
-        input,
-        button[type="submit"] {
-            border-radius: var(--br);
-            padding-block: var(--spacing-top) var(--spacing-bottom);
-            padding-inline: var(--spacing-right) var(--spacing-left);
-            font: inherit;
-        }
-
-        .text-center {
-            text-align: center;
-            color: #000;
-        }
-
-        input {
-            display: block;
-            width: 300px;
-            border-radius: 5px;
-            border: 1px solid var(--color-n-200);
-            transition: var(--transition);
-        }
-
-        input:focus {
-            outline: none;
-            border-color: var(--color-primary);
-        }
-
-        label {
-            position: absolute;
-            top: var(--spacing-top);
-            left: var(--spacing-left);
-            color: var(--color-n-300);
-            font-size: 16px;
-            pointer-events: none;
-            transition: var(--transition);
-        }
-
-        input:focus ~ label,
-        input:valid ~ label {
-            top: calc(var(--spacing-top) * var(--spacing-top-offset));
-            left: calc(var(--spacing-left) * var(--spacing-left-offset));
-            font-size: 15px;
-            background-color: #fff;
-            color: var(--color-primary);
-            padding-inline: 4px;
-        }
-
-        button[type="submit"] {
-            display: inline-block;
-            background-color: var(--color-primary);
-            color: #fff;
-            border-radius: 5px;
-            border: 0;
-            cursor: pointer;
-        }
-
-        .link {
-            color: var(--color-primary);
-            text-decoration: none;
-        }
-
-        p {
-            margin: 0;
-        }
-    </style>
+  body {
+    background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  canvas {
+    border: 1px solid white;
+  }
+  </style>
 </head>
 <body>
-    <form class="form">
-        <header>
-            <h1 class="text-center">Login</h1>
-        </header>
-        <div class="form-group">
-            <input type="email" id="email" required>
-            <label for="email">Email address</label>
-        </div>
-        <div class="form-group">
-            <input type="password" id="password" required>
-            <label for="password">Password</label>
-        </div>
-        <p><a class="link" href="#">Forgot password?</a></p>
-        <button type="submit">Contnue</button>
-        <p class="text-center">Don't have an account?
-            <a class="link" href="SS&MP lab- contents.doc">Sign up</a>
-        </p>
-    </form>
+<canvas width="400" height="400" id="game"></canvas>
+<script>
+var canvas = document.getElementById('game');
+var context = canvas.getContext('2d');
+
+// the canvas width & height, snake x & y, and the apple x & y, all need to be a multiples of the grid size in order for collision detection to work
+// (e.g. 16 * 25 = 400)
+var grid = 16;
+var count = 0;
+
+var snake = {
+  x: 160,
+  y: 160,
+
+  // snake velocity. moves one grid length every frame in either the x or y direction
+  dx: grid,
+  dy: 0,
+
+  // keep track of all grids the snake body occupies
+  cells: [],
+
+  // length of the snake. grows when eating an apple
+  maxCells: 4
+};
+var apple = {
+  x: 320,
+  y: 320
+};
+
+// get random whole numbers in a specific range
+// @see https://stackoverflow.com/a/1527820/2124254
+function getRandomInt(min, max) {
+  return Math.floor(Math.random() * (max - min)) + min;
+}
+
+// game loop
+function loop() {
+  requestAnimationFrame(loop);
+
+  // slow game loop to 15 fps instead of 60 (60/15 = 4)
+  if (++count < 4) {
+    return;
+  }
+
+  count = 0;
+  context.clearRect(0,0,canvas.width,canvas.height);
+
+  // move snake by it's velocity
+  snake.x += snake.dx;
+  snake.y += snake.dy;
+
+  // wrap snake position horizontally on edge of screen
+  if (snake.x < 0) {
+    snake.x = canvas.width - grid;
+  }
+  else if (snake.x >= canvas.width) {
+    snake.x = 0;
+  }
+
+  // wrap snake position vertically on edge of screen
+  if (snake.y < 0) {
+    snake.y = canvas.height - grid;
+  }
+  else if (snake.y >= canvas.height) {
+    snake.y = 0;
+  }
+
+  // keep track of where snake has been. front of the array is always the head
+  snake.cells.unshift({x: snake.x, y: snake.y});
+
+  // remove cells as we move away from them
+  if (snake.cells.length > snake.maxCells) {
+    snake.cells.pop();
+  }
+
+  // draw apple
+  context.fillStyle = 'red';
+  context.fillRect(apple.x, apple.y, grid-1, grid-1);
+
+  // draw snake one cell at a time
+  context.fillStyle = 'green';
+  snake.cells.forEach(function(cell, index) {
+
+    // drawing 1 px smaller than the grid creates a grid effect in the snake body so you can see how long it is
+    context.fillRect(cell.x, cell.y, grid-1, grid-1);
+
+    // snake ate apple
+    if (cell.x === apple.x && cell.y === apple.y) {
+      snake.maxCells++;
+
+      // canvas is 400x400 which is 25x25 grids
+      apple.x = getRandomInt(0, 25) * grid;
+      apple.y = getRandomInt(0, 25) * grid;
+    }
+
+    // check collision with all cells after this one (modified bubble sort)
+    for (var i = index + 1; i < snake.cells.length; i++) {
+
+      // snake occupies same space as a body part. reset game
+      if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
+        snake.x = 160;
+        snake.y = 160;
+        snake.cells = [];
+        snake.maxCells = 4;
+        snake.dx = grid;
+        snake.dy = 0;
+
+        apple.x = getRandomInt(0, 25) * grid;
+        apple.y = getRandomInt(0, 25) * grid;
+      }
+    }
+  });
+}
+
+// listen to keyboard events to move the snake
+document.addEventListener('keydown', function(e) {
+  // prevent snake from backtracking on itself by checking that it's
+  // not already moving on the same axis (pressing left while moving
+  // left won't do anything, and pressing right while moving left
+  // shouldn't let you collide with your own body)
+
+  // left arrow key
+  if (e.which === 37 && snake.dx === 0) {
+    snake.dx = -grid;
+    snake.dy = 0;
+  }
+  // up arrow key
+  else if (e.which === 38 && snake.dy === 0) {
+    snake.dy = -grid;
+    snake.dx = 0;
+  }
+  // right arrow key
+  else if (e.which === 39 && snake.dx === 0) {
+    snake.dx = grid;
+    snake.dy = 0;
+  }
+  // down arrow key
+  else if (e.which === 40 && snake.dy === 0) {
+    snake.dy = grid;
+    snake.dx = 0;
+  }
+});
+
+// start the game
+requestAnimationFrame(loop);
+</script>
 </body>
 </html>
